--- a/mvccoreSeguridadProovedor/appsettings.json
+++ b/mvccoreSeguridadProovedor/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "cadenaAspNetDbSqlCasa": "Data Source=LAPTOP-5V3JT702\\SQLEXPRESS;Initial Catalog=aspnetdb;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
